[package]
name = "rusty_home"
version = "0.1.0"
edition = "2021"
authors = ["Maximilian Schwenger <mail@mschwenger.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.12.0"
serde_yaml = "0.9.21"
serde = { version = "1.0", features = ["derive"] }
ctrlc = "3.2.5"
serde_json = "1.0.96"
regex = "1.8.1"
lazy_static = "1.4.0"
hyper = { version = "0.14.26", features = ["server", "tcp", "http1"] }
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3.28"
palette = { version = "0.7.1", features = ["serializing"] }
url = "2.3.1"
chrono = "0.4.24"
